# omnispy

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-04-search-time-filter.md  2026-07-05-production-features.md  2026-07-08-mvp-multi-route-search.md
docs/superpowers/specs/: 2026-07-04-search-time-filter-design.md  2026-07-07-mvp-production-features.md
omnispy/: __main__.py  api.py  config.py
omnispy/agents/: router.py  x_agent.py
omnispy/llm/: ollama.py  provider.py
plans/: 001-x-mvp.md  002-x-search.md  003-x-search-time-filter.md
server/: __main__.py  app.py  config.py  db.py  scheduler.py  service.py
server/frontend/: index.html  package-lock.json  package.json
server/frontend/src/: App.vue  router.ts  utils.ts
server/frontend/src/api/: index.ts
server/frontend/src/components/: NavBar.vue  SideBar.vue
server/frontend/src/types/: index.ts
server/frontend/src/views/: ManualSearch.vue  TaskDetail.vue  TaskForm.vue  TaskList.vue
server/routes/: results.py  search.py  tasks.py
tests/: test_api.py  test_config.py  test_server_db.py  test_server_routes_results.py  test_server_routes_search.py  test_server_routes_tasks.py  test_server_scheduler.py  test_server_service.py  test_x_spider.py  test_x_tools.py
tests/fixtures/: x_search_page.html  x_user_page.html
