[project]
name = "omnispy"
version = "0.1.0"
description = "Multi-platform social media scraping agent, built on Scrapling + LightAgent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "scrapling[all]>=0.3",
    "lightagent>=0.6.5,<0.9",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.12",
    "apscheduler>=3.10",
]

[project.scripts]
omnispy = "omnispy.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omnispy"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]